--- a/WEB FUNDAMENTALS/week1/day4/core/Profile Page/style.css
+++ b/WEB FUNDAMENTALS/week1/day4/core/Profile Page/style.css
@@ -1,182 +1,134 @@
 *{
     margin: 0;
-    display: 0;
+    padding: 0;
     font-family: sans-serif;
+     background-color:#f3f3f3 ;
+}
+.top{
+    background-color: #333333;
+}
+.navbar{
+    width: 1000px;
+    margin: 0  auto;
+    color: #ffffff;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    background-color: #333333;
+}
+.link{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    justify-content: space-around;
+    background-color: #333333;
+}
+.navbar a{
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #333333;
+}
+.title{
+    margin-left: 22px;
+    background-color: #333333;
+}
+.btn{
+    width: 100px;
+    height:30px ;
+    color: #ffffff;
+    background-color: #17a2b8;
+    font-size: 15px;
+    border: none;
+    box-shadow: 5px 5px black;
 }
 .container{
-margin: 0 auto;
-width: 80%;
-padding: 10px;
-background-color: beige;
-}
-.navbar{ 
-display: flex;
-height: 60px;
- justify-content: space-between;
-align-items: center; 
-background-color: rgb(27, 25, 25);
-color: white;
-padding: 10PX;
-}
-.navbar ul  {
-display: flex;
-flex: 2;
-justify-content: space-between; 
-
-}
-.navbar ul li{
-display: inline-block;
-margin-right: 10px;
-justify-content: space-between;
-
-}
- a{color: rgba(255, 255, 255, 0.5);
-    text-decoration: none;
-    
-}
-button{ background-color: aqua;
-color: aliceblue;
-box-shadow: 3px 3px black ;
-padding: 7px;
-
-}
-.profil{color: aliceblue;}
-.h1{flex: 2;
-font-size: 40px;}
-.main{
-    width:40% ;
+    width: 1000px;
     margin: 0 auto;
+}
+.main{
     display: flex;
-    flex-direction: column;
-
-    gap: 20px;
-    justify-content: flex-start;
-    align-items: center;
+}
+.leftcol, .rightcol {
+    margin: 15px;
+    padding: 15px;
+    flex: 1;
+}
+.leftcol{
+    flex: 2;
 }
 
 
-.usercard{ 
-    width: 400px; 
-    height: 300px;
-    border:2px solid rgba(98, 98, 98, 0.5);
-    display: flex;
-    flex-direction: column;
-}
-.blue{
-    background-color: rgb(0, 221, 221);
-    height: 100px;
+.user-card, .card {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items:center ;
-    position: relative;
-    margin-bottom: 40px;
-    
+    background-color: #fff;
+    border: 2px solid #999;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    font-size: 1.3rem;
 }
-.UI{
-    width: 70px;
-    height: 70px;
-    top: 65px;
-    left: 30px;
-    position: absolute;
+.topcard {
+    background-color: #17a2b8;
+    height: 120px;
+    margin-bottom: 60px;
+}
+.card-body{
+    padding: 25px;
+
+}
+.jane{
     border-radius: 50%;
+    background-color: #fff;
+    height: 150px;
+    padding: 5px;
+    margin-top: 20px;
+    margin-left:20px ;
 }
-.location{
+.icon{
+    height: 20px;
+}
+a{
+    color:#3a81e6;
+}
+.header{
+    background-color: #333333;
+    padding: 20px;
+    color: #ffffff;
+    font-size: 24px;
     display: flex;
     align-items: center;
-    gap: 10px;
 
 }
-.education{
-    width: 400px; 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    border-radius: 15px;
-    overflow: hidden;
-    border: 2px solid grey;
-}
-.education h3{
-    background-color: black;
-    color: white;
-    width: 100%;
-    padding: 5px 10px;
-}
-.education > *{
-    padding:  0px 15px;
-}
-.sidebar{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 350px;
-    padding: 10px;
-    position: fixed;
-    right: 150px;
-    top: 100px;
-    gap: 10px;
-}
-.sidebar > div > h4{
-    width: 100%;
-    background-color: black;
-    color: white;
-    padding: 5px 10px;
-    text-align: center;
-} 
-.sidebar > div{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 10px;
-    background-color: rgba(240, 248, 255, 0.5);
-    border: 2px solid gray;
-    border-radius: 15px;
-    overflow: hidden;
-}
-.profile-pic{
-    width: 50px;
+.pic{ 
+    border-radius: 50%;
     height: 50px;
-    border-radius: 50%;
+    margin-right: 12px;
 }
-.profile-preview{
+.users{
     display: flex;
-    width: 100%;
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    margin-block: 5px;
+    margin: 20px;
 }
-.profile-preview > div:first-child{
+.userstop, .usersbot{
     display: flex;
-    width: 100%;
-    flex-direction: row;
-    justify-content: flex-start;
     align-items: center;
-    gap:10px;
+    font-size: 25px;
 }
-.profile-preview > div:last-child{
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    gap:10px;
+.date{
+    font-size: 20px;
+    color: #777;
 }
-.sidebar > div > a{
-    width: 100%;
-    border-top: 2px solid grey;
-    text-decoration: none;
-    color: blue;
-    text-align: center;
-    padding: 5px 10px;
+.footer{
+    padding: 20px;
+    border-top: 2px solid #999;
 }
-span{
-    background-color: grey;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 50%;
+.connection{
+    background-color: #eee;
+    color: #333;
+    font-size: 20px;
+    border-radius: 14px;
+    height: 25px;
+    padding: 0 10px;
+    margin-right: 10px;
 }
