--- a/WEB FUNDAMENTALS/week2/day3/practice/DojoWeather/style.css
+++ b/WEB FUNDAMENTALS/week2/day3/practice/DojoWeather/style.css
@@ -54,20 +54,25 @@
     justify-content: space-between;
     align-items: center;
 }
+.tem{
+    display: flex;
+    align-items: center ;
+}
 .row{
     display: flex;
 }
-.wither{
+.weather{
     flex: 1;
     text-align: center;
     background-color:#EEEEEE ;
     margin-right: 20px;
-    padding: 35px 0;
+    padding: 35px 0; 
+    justify-content: space-evenly;
 }
-.wither :last-child{
+.weather :last-child{
     margin-right: 0;
 }
-.wither img {
+.weather img {
     width: 150px;
     border-radius: 50%;
 
@@ -75,10 +80,10 @@
 .temperature{
     margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px;
 }
-.hight{
+.high{
     color: red;
 }
 .low{
@@ -94,14 +99,14 @@
 .cookies{
     box-sizing: border-box;
     width: 1000px;
-    height: 150px;
+    height: 100px;
     padding: 15px;
     border: 2px solid black;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    
 
 }
 
